--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,4 +1,28 @@
-.movies .movie {
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.movies {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 50px;
+  padding-top: 70px;
+  width: 80%;
+}
+
+movies .movie {
   width: 45%;
   background-color: white;
   margin-bottom: 70px;
@@ -16,8 +40,7 @@
 .movie img {
   position: relative;
   top: -50px;
-  max-width: 150px;
-  width: 100%;
+  max-width: 120px;
   margin-right: 30px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
